infrastructure/lldap/lldap.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lldap
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
      component: server
  template:
    metadata:
      labels:
        app: lldap
        component: server
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: lldap
          image: lldap/lldap:2025-12-02
          ports:
            - name: http
              containerPort: 17170
            - name: ldap
              containerPort: 3890
            - name: ldaps
              containerPort: 6360
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              memory: 100Mi
