infrastructure/lldap/postgres.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
      component: postgres
  template:
    metadata:
      labels:
        app: lldap
        component: postgres
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: postgres
          image: postgres:17
          command:
            - gosu
            - postgres
            - rm
            - /var/lib/postgresql/data/postmaster.pid
#            - /usr/lib/postgresql/17/bin/pg_resetwal
#            - -f
#            - /var/lib/postgresql/data/pgdata
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: wal
              mountPath: /var/lib/postgresql/wal
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              memory: 100Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: wal
          persistentVolumeClaim:
            claimName: postgres-wal
