infrastructure/lldap/lldap-service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: lldap-web
  namespace: lldap
spec:
  selector:
    app: lldap
    component: server
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 17170
