infrastructure/lldap/lldap-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  selector:
    app: lldap
    component: server
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: ldap
      port: 389
      targetPort: 3890
    - name: ldaps
      port: 636
      targetPort: 6360
