infrastructure/lldap/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: lldap
    component: postgres
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
