infrastructure/lldap/lldap-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: lldap
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - users.starsystem.dev
      secretName: lldap-tls
  rules:
    - host: users.starsystem.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap-web
                port:
                  number: 80
